--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost/collector_prod?useUnicode=true&amp;characterEncoding=utf8
-spring.datasource.username=collector_prod
-spring.datasource.password=collector_prod
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:hsqldb:data/myreader.db
+spring.datasource.username=SA
+spring.datasource.password=
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
+spring.jpa.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.properties.hibernate.search.default.indexBase=data/index
 spring.jpa.properties.hibernate.search.lucene_version=LUCENE_41
