--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 apply plugin: 'pmd'
+apply plugin: 'findbugs'
 
 group = 'myreader'
 version = '0.6'
@@ -97,4 +98,11 @@ cobertura {
     coverageCheckTotalBranchRate = 100
     coverageCheckTotalLineRate = 100
     coverageCheckHaltOnFailure = false
+}
+
+tasks.withType(FindBugs) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
+    }
 }
