--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ jdk:
   - oraclejdk8
 
 after_success:
-   - if [[ $TRAVIS_JDK_VERSION == "oraclejdk8" ]]; then ./gradlew cobertura coveralls; fi
+   - if [[ $TRAVIS_JDK_VERSION == "oraclejdk8" ]]; then ./gradlew cobertura coveralls -i; fi
