--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'java'
 apply plugin: 'com.moowork.node'
 
 node {
-    version = '0.10.38'
+    version = '0.12.0'
     npmVersion = '1.4.28'
     download = true
 }
@@ -27,15 +27,31 @@ task gulp(type: NodeTask) {
     args = ['build']
 }
 
-task clean(type: NodeTask) {
+task gulpClean(type: NodeTask) {
     script = file('node_modules/gulp/bin/gulp.js')
     args = ['clean']
 }
 
 task npmClean(type: NodeTask) {
-   // script = file('node_modules/gulp/bin/gulp.js')
-    args = ['run', 'clean']
+    args = ['clean']
 }
 
+task test(overwrite:true, type: NodeTask) {
+    script = file('node_modules/karma/bin/karma')
+    args = ['start', 'karma.conf.js']
+}
+
+clean {
+    delete "node_modules", "node", "dist"
+}
+
+npmInstall {
+    args
+//    outputs.upToDateWhen {
+//        false
+//    }
+}
+
+clean.dependsOn gulpClean
 gulp.dependsOn npmInstall
 jar.dependsOn gulp
