--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -1,10 +1,6 @@
 {
   "name": "myreader-frontend",
-  "description": "node.js packages for sagan UI.",
-  "repository" : {
-    "type": "git",
-    "url": "http://github.com/spring-io/sagan.git"
-  },
+  "description": "Myreader frontend package",
   "dependencies": {
     "angular": "1.4.5",
     "angular-sanitize": "1.4.5",
