--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ def gradleDir = "${rootProject.rootDir}/gradle"
 wrapper.gradleVersion = '2.6'
 
 buildscript {
-    ext.springBootVersion = '1.3.0.M5'
+    ext.springBootVersion = '1.3.0.RC1'
     ext.springRepo = 'http://repo.spring.io/libs-release'
     ext.springRepoMilestone = 'http://repo.spring.io/libs-release'
 
