--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.properties.hibernate.search.lucene_version=LUCENE_41
 server.context-path=/myreader
 server.port=19340
 server.address=127.0.0.1
+server.session.persistent=true
 
 spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
