--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -40,6 +40,7 @@
     "phantomjs": "1.9.18",
     "through2": "2.0.0",
     "vinyl-paths": "2.0.0",
+    "path": "0.12.7",
 
     "angular-mocks": "1.4.5"
   },
