--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -14,8 +14,9 @@ spring.jpa.properties.hibernate.search.lucene_version=LUCENE_41
 server.context-path=/myreader
 server.port=19340
 server.address=127.0.0.1
-server.session.persistent=true
 
 spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
+
+remember-me.key=35beb88f-4c1f-4f39-aab2-953115ea33ba
