--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "karma": "0.12.17",
     "karma-jasmine": "0.3.6",
-    "karma-phantomjs-launcher": "~0.1.1",
+    "karma-phantomjs-launcher": "1.0.0",
     "karma-junit-reporter": "~0.2.2",
     "karma-ng-json2js-preprocessor": "~0.1.1",
     "karma-ng-scenario": "~0.1.0",
@@ -37,7 +37,7 @@
     "del": "2.0.1",
     "gulp-html-src": "1.0.0",
     "gulp-debug": "*",
-    "phantomjs": "1.9.18",
+    "phantomjs-prebuilt": "2.1.7",
     "through2": "2.0.0",
     "vinyl-paths": "2.0.0",
     "path": "0.12.7",
