--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix'
     compile group: 'org.springframework.security', name: 'spring-security-data', version: '4.0.2.RELEASE'
     compile group: 'jdom', name: 'jdom', version: '1.0'
     compile group: 'org.hibernate', name: 'hibernate-search', version: '5.1.2.Final'
@@ -54,6 +56,12 @@ dependencies {
     testCompile group: 'xml-apis', name: 'xml-apis', version: '1.4.01'
     testCompile(group: 'com.github.tomakehurst', name: 'wiremock', version: '1.57') {
         exclude(module: 'servlet-api')
+    }
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.RELEASE"
     }
 }
 
