--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.main.banner-mode=off
+
 spring.datasource.url=jdbc:hsqldb:data/hsqldb/myreader;shutdown=true;hsqldb.default_table_type=cached;hsqldb.defrag_limit=2;hsqldb.nio_data_file=false
 spring.datasource.username=SA
 spring.datasource.password=
